--- a/front-end/src/pages/landingPage.css
+++ b/front-end/src/pages/landingPage.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 822px;
+    width: 100%;
     height: 469px;
 }
 
@@ -20,7 +20,7 @@
 
 .navBar {
     position: absolute;
-    width: 1020px;
+    width: 100%;
     height: 77px;
     background-color: #BECCFF;
     top: 0%
